<resources>
    <string name="AccountPublicKeys">Account Public Keys</string>
    <string name="Add">Add</string>
    <string name="AddBookmark">Add Bookmark</string>
    <string name="AddCustomToken">Add Custom Token</string>
    <string name="Address">Address</string>
    <string name="Addresses">Addresses</string>
    <string name="Advanced">Advanced</string>
    <string name="AdvancedSettings">Advanced Settings</string>
    <string name="AllAssetsInOnePlace">All assets in one place</string>
    <string name="AllAssetsInOnePlaceSubTitle">View and store your assets seamlessly.</string>
    <string name="AllTime">All Time</string>
    <string name="Approve">Approve</string>
    <string name="Back">Back</string>
    <string name="BackUpYourWalletNow">Back up your wallet now!</string>
    <string name="BackUpYourWalletNowConcent">I understand that if I lose my recovery words, I will not be able to access my wallet.</string>
    <string name="BackUpYourWalletNowSubTitle">In the next step you will see 12 words that allows you to recover a wallet.</string>
    <string name="BackUpYourWalletNowWarning">Do not upload the words online nor share them with anyone, store them safely.</string>
    <string name="BackupOptions">Backup Options</string>
    <string name="Balance">Balance</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Browser">Browser</string>
    <string name="BuyCryptoWarningMessage">"A purchase will be done via third party provider 
the fee is already included in this rate."</string>
    <string name="BuyCryptocurrency">Buy %s</string>
    <string name="BuyCryptocurrencyTitle">Buy Cryptocurrency</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="Cheap">Cheap</string>
    <string name="CirculatingSupply">Circulating Supply</string>
    <string name="Collectible">Collectible</string>
    <string name="Collectibles">Collectibles</string>
    <string name="Completed">Completed</string>
    <string name="ConfirmSignTransaction">Do you want to sign this transaction?</string>
    <string name="ConfirmTransaction">Confirm Transaction</string>
    <string name="Confirmations">Confirmations</string>
    <string name="Connecting">Connecting</string>
    <string name="Continue">Continue</string>
    <string name="ContractAddress">Contract Address</string>
    <string name="Copied">Copied: %s</string>
    <string name="Copy">Copy</string>
    <string name="CopyAddress">Copy Address</string>
    <string name="CopyPhraseAlertMessage">Never share recovery phrase with anyone, store it securely!</string>
    <string name="CreateANewWallet">Create a new wallet</string>
    <string name="Creating">Creating Wallet…</string>
    <string name="CreatingUrl">Creating Url…</string>
    <string name="CreatingWallet">Creating Wallet</string>
    <string name="DAppStore">DApp Store</string>
    <string name="DApps">DApps</string>
    <string name="Decimals">Decimals</string>
    <string name="Delete">Delete</string>
    <string name="Deleting">Deleting</string>
    <string name="Destination_Tag">Destination Tag</string>
    <string name="Developer">Developer</string>
    <string name="DisableTokensWithZeroBalance">Disable Tokens With Zero Balance</string>
    <string name="DisconnectWarning">Do you want to disconnect this session?</string>
    <string name="Done">Done</string>
    <string name="DuckDuckGo">DuckDuckGo</string>
    <string name="Edit">Edit</string>
    <string name="Empty">Empty</string>
    <string name="EmptyString" />
    <string name="Enable">Enable</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="Error">Error</string>
    <string name="ExploreCollectibles">Explore new collectibles in the DApps tab.</string>
    <string name="ExploreDecentralizedApps">Explore decentralized apps</string>
    <string name="ExploreDecentralizedAppsSubTitle">Earn, explore, utilize, spend, trade, and more.</string>
    <string name="Export">Export</string>
    <string name="ExportAccountPublicKeys">Export Account Public Keys</string>
    <string name="ExportAccountPublicKeysWarning">Be careful with your Account Public Keys (XPUBs), when you give them to a third party, you allow it to see your whole transactions history</string>
    <string name="Fast">Fast</string>
    <string name="FollowUs">Follow Us</string>
    <string name="FollowUsMessage">Stay in touch and find out about updates and announcements first!</string>
    <string name="GasLimit">Gas Limit</string>
    <string name="GasPrice">Gas Price</string>
    <string name="Google">Google</string>
    <string name="HelpCenter">Help Center</string>
    <string name="HighNetworkFeeError">Network Fee is too high. Max available: %s</string>
    <string name="History">History</string>
    <string name="IAlreadyHaveAWallet">I already have a wallet</string>
    <string name="IfYouLoseAccessWarning">If you lose access to this device, your funds will be lost, unless you back up!</string>
    <string name="ImportForNetwork">Import for network</string>
    <string name="ImportingWallet">Importing wallet</string>
    <string name="InCoordinatorError.onlyWatchAccount">This wallet can be only used for watching. Import Private Key/Keystore to sign transactions/messages</string>
    <string name="IncomingTransaction">Incoming Transaction</string>
    <string name="InsufficientNetworkFee">Insufficient %s to cover network fee</string>
    <string name="InvalidBlockchainAddress">Invalid %s Address</string>
    <string name="InvalidDecimalPart">Invalid decimal part. Max allowed decimals %s.</string>
    <string name="KeystoreJSON">Keystore JSON</string>
    <string name="LearnMore">Learn More</string>
    <string name="Loading">Loading</string>
    <string name="LotSizeMultiplesError" formatted="false">%s amount should be multiples of %s</string>
    <string name="MainWallet">Main Wallet</string>
    <string name="MarketCap">Market Cap</string>
    <string name="MarketNotAvailable">Market Info not available.</string>
    <string name="Memo">Memo</string>
    <string name="MinimumPurchase">%s Minimum Purchase</string>
    <string name="Month">Month</string>
    <string name="MoreDetails">More Details</string>
    <string name="MoreDetailsOn">More details on %s</string>
    <string name="MultiCoinWallet">Multi-Coin Wallet</string>
    <string name="MultiCoinWallets">Multi-Coin Wallets</string>
    <string name="MustNumericValue">Must be a numeric value.</string>
    <string name="MyPublicAddressToReceive">My Public Address to Receive %s</string>
    <string name="MyWalletAddress">My Wallet Address</string>
    <string name="Name">Name</string>
    <string name="Network">Network</string>
    <string name="NetworkFee">Network Fee</string>
    <string name="Networks">Networks</string>
    <string name="NeverShareAlertMessage">Never share your %s with anyone, store it securely!</string>
    <string name="New">New</string>
    <string name="Next">Next</string>
    <string name="NoAccountsAvailable">No Accounts Available</string>
    <string name="NoAssetsFound">No assets found</string>
    <string name="NoTransactions">Transactions will appear here</string>
    <string name="NodeSettings">Node Settings</string>
    <string name="Nonce">Nonce</string>
    <string name="NotApplicable">N/A</string>
    <string name="NotAvailable">Not available</string>
    <string name="OK">OK</string>
    <string name="OneHour">1H</string>
    <string name="OpenOn">Open on %s</string>
    <string name="Optional">Optional</string>
    <string name="OtherString">Others</string>
    <string name="OutgoingTransaction">Outgoing Transaction</string>
    <string name="Password">Password</string>
    <string name="PendingTransaction">Pending Transaction</string>
    <string name="Phrase">Phrase</string>
    <string name="PhraseVerifiedMessage">"You successfully verified your wallet's phrase."</string>
    <string name="Prepare">Prepare…</string>
    <string name="PrivateAndSecure">Private and secure</string>
    <string name="PrivateKey">Private Key</string>
    <string name="QRCode">QR Code</string>
    <string name="QRCodeContains">This QR Code contains your %s</string>
    <string name="RateTrustWalletMessage">"If you enjoy using Trust Wallet, would you mind taking a moment to rate it?
Thanks for your support!"</string>
    <string name="RateTrustWalletTitle">Rate Trust Wallet!</string>
    <string name="ReceivingAddress">Receiving address</string>
    <string name="RecoveryPhrase">Recovery Phrase</string>
    <string name="Refresh">Refresh</string>
    <string name="Regular">Regular</string>
    <string name="Reload">Reload</string>
    <string name="Resume">Resume</string>
    <string name="Retry">Retry</string>
    <string name="Save">Save</string>
    <string name="SeeAll">See All</string>
    <string name="Send">Send</string>
    <string name="SetAmount">Set Amount</string>
    <string name="Settings">Settings</string>
    <string name="Share">Share</string>
    <string name="ShareVia">Share Via</string>
    <string name="ShareWithFriends">Share With Friends</string>
    <string name="ShowQR">Show QR</string>
    <string name="ShowRecoveryPhrase">Show Recovery Phrase</string>
    <string name="Sign">Sign</string>
    <string name="SignatureRequest">Signature Request</string>
    <string name="Signing">Signing...</string>
    <string name="SmartContractCall">Smart Contract Call</string>
    <string name="SortTokensByBalance">Sort by: Balance</string>
    <string name="SortTokensByDefault">Sort by: Default</string>
    <string name="SortTokensByName">Sort by: Name</string>
    <string name="Status">Status</string>
    <string name="Suggested">Suggested</string>
    <string name="Swap">Swap</string>
    <string name="SwitchAsset">Switch Asset</string>
    <string name="Symbol">Symbol</string>
    <string name="Today">Today</string>
    <string name="TokenName">%1$s (%2$s)</string>
    <string name="Tokens">Tokens</string>
    <string name="TotalSupply">Total Supply</string>
    <string name="TradeAssets">Trade assets</string>
    <string name="TradeAssetsSubTitle">Trade your assets anonymously.</string>
    <string name="TradeOrder">Trade Order</string>
    <string name="TransactionDetails">Transaction Details</string>
    <string name="TransactionSpeed">Transaction Cost</string>
    <string name="TryAgain">Try again</string>
    <string name="TwentyFourHours">24H</string>
    <string name="UnknownError">An unknown error occurred.</string>
    <string name="VerifyPasscode">Verify Passcode</string>
    <string name="VerifyRecoveryPhrase">Verify recovery phrase</string>
    <string name="VisitOurHelpCenter">Uh-oh! We were unable to process your transaction. Please try again or visit our help center.</string>
    <string name="Volume24h">Volume (24h)</string>
    <string name="WCCancelOrderFormat" formatted="false">Cancel %s/%s order: %s</string>
    <string name="WCTradeOrderFormat" formatted="false">Trade %s %s for %s %s (price: %s)</string>
    <string name="WCTransferCoinFormat" formatted="false">Transfer %s %s</string>
    <string name="YouRecoveryPhraseSubTitle">Write down or copy these words in the right order and save them somewhere safe.</string>
    <string name="YourRecoveryPhrase">Your recovery phrase</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bullet">•</string>
    <string name="dot">.</string>
    <string name="eight">8</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="walletCreated">Wallet Created</string>
    <string name="zero">0</string>
</resources>