<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:rowCount="4" android:columnCount="3"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num1" android:background="@drawable/bg_ripple_pin_key" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/one" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num2" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/two" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num3" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/three" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num4" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/four" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num5" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/five" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num6" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/six" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num7" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/seven" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num8" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/eight" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num9" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/nine" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/numDot" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/dot" android:layout_weight="1.0" />
        <Button android:textSize="30.0sp" android:textColor="#a0000000" android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/num0" android:background="@drawable/bg_ripple_pin_key" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:text="@string/zero" android:layout_weight="1.0" />
        <ImageButton android:gravity="center" android:layout_gravity="fill_horizontal" android:id="@+id/delete" android:background="@android:color/transparent" android:padding="@dimen/normal_padding" android:paddingBottom="@dimen/normal_padding" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_margin="1.0dip" android:layout_weight="1.0" app:srcCompat="@drawable/ic_backspace_gray_24dp" />
    </LinearLayout>
</LinearLayout>