<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/white" android:padding="@dimen/half_large_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="26.0sp" android:textColor="#ff323747" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BackUpYourWalletNow" android:layout_centerHorizontal="true" android:fontFamily="@font/roboto_bolt" />
    <TextView android:textSize="18.0sp" android:textColor="#ff818487" android:gravity="center" android:id="@+id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:text="@string/BackUpYourWalletNowSubTitle" android:layout_below="@id/title" android:layout_centerHorizontal="true" android:fontFamily="@font/roboto_regular" />
    <LinearLayout android:orientation="horizontal" android:id="@+id/warning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/understand_container" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:textColor="#ff323747" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normal_margin" android:text="@string/bullet" android:fontFamily="@font/roboto_bolt" />
        <TextView android:textSize="12.0sp" android:textColor="#ff323747" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normal_margin" android:text="@string/BackUpYourWalletNowWarning" android:fontFamily="@font/roboto_regular" />
    </LinearLayout>
    <RelativeLayout android:id="@+id/understand_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/big_margin" android:layout_above="@id/next">
        <CheckBox android:id="@+id/concent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_centerVertical="true" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff323747" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:text="@string/BackUpYourWalletNowConcent" android:layout_centerHorizontal="true" android:fontFamily="@font/roboto_regular" android:layout_toEndOf="@id/concent" />
    </RelativeLayout>
    <Button android:enabled="false" android:id="@+id/next" android:padding="@dimen/big_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Continue" android:layout_alignParentBottom="true" style="@style/Widget.AppCompat.Button.Colored" />
    <ImageView android:layout_width="180.0dip" android:layout_height="180.0dip" android:src="@drawable/icon_backup" android:layout_above="@id/warning" android:layout_below="@id/subtitle" android:layout_centerHorizontal="true" />
</RelativeLayout>