<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/root" android:background="@color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/layout_app_bar" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <FrameLayout android:id="@+id/google_framelayout" android:background="@color/white" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/title_height_normal" android:paddingStart="@dimen/large_padding">
                <TextView android:textSize="@dimen/normal_text" android:textColor="@color/item_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Google" android:layout_centerVertical="true" />
                <RadioButton android:id="@+id/google_radiobutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/big_padding" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout android:id="@+id/duckduckgo_framelayout" android:background="@color/white" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/title_height_normal" android:paddingStart="@dimen/large_padding">
                <TextView android:textSize="@dimen/normal_text" android:textColor="@color/item_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DuckDuckGo" android:layout_centerVertical="true" />
                <RadioButton android:id="@+id/duckduckgo_radiobutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/big_padding" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>